2004-03-10  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-private-utils.[ch]
	(gnome_vfs_process_run_cancellable):
	Use correct return type.

2004-03-09  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/gnome-vfs-ssl.c: Doh! I managed to break compilation
	by adding unwanted chars at the beginning of the file :(

2004-03-08  Christophe Fergeau  <teuf@gnome.org>

	* configure.in: 
	  Properly install ssl-modules.conf when using GNU TLS
	* libgnomevfs/gnome-vfs-ssl.c: (gnome_vfs_ssl_create_from_fd): fix an
	  implicit int to pointer conversion when using GNU TLS.

2004-03-08  Alexander Larsson  <alexl@redhat.com>

	* modules/sftp-method.c (sftp_connect):
	Return ACCESS DENIED for servers with unknown host key (for now)	

=== gnome-vfs 2.5.90 ===

2004-03-08  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Update to 2.5.90
	
2004-03-08  Dave Camp  <dave@ximian.com>

	* modules/sftp-method.c: (sftp_connect), (sftp_get_connection),
	(sftp_connection_close), (sftp_connection_ref),
	(close_and_remove_connection), (sftp_connection_unref), (do_open),
	(do_create), (do_write), (do_get_file_info), (do_open_directory),
	(do_make_directory), (do_remove_directory), (do_move), (do_rename),
	(do_unlink), (do_set_file_info), (do_create_symlink),
	(close_thunk), (vfs_module_shutdown): Fix some threadsafety and
	refcounting problems.

2004-03-07  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/gnome-vfs-utils.c: (gnome_vfs_get_volume_free_space):
	Fixed a small leak on Sun machines

2004-03-05  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-volume-ops.c (emit_pre_unmount):
	Do a synchronous pre_unmount in this process and delay to
	allow other processes to release their hold on the device.

2004-03-05  Alexander Larsson  <alexl@redhat.com>

	* modules/default-modules.conf (sftp):
	Don't include "lib" and ".so" in library reference.
	Noticed by Michael Wilson <Michael.Wilson@bull.net>
	